# Canerator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: CPM.cmake
scripts/: main.lua
src/: app.cpp  app.hpp  lv_conf.h  main.cpp
src/lvgl_demo/: lv_demo_conf.h  lv_demo_widgets.c  lv_demo_widgets.h
